Se agregaron enlaces al menu de categorias y subcategorias que a su vez al ser clicleadas los lleva a su respectivo apartado en donde se hace una consulta interna de acuerdo a la categoria junto con su subcategoria si es el caso. Se agrego portada al menu de publicaciones para mejor vista. Se agrego la selección de categorias en el apartado de Publicar. Se agrego la función para cargar imagenes.

--- a/static/css/publicar.css
+++ b/static/css/publicar.css
@@ -1,6 +1,31 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway);
 #publicar{
   margin: 0 auto;
   align-items: center;
+}
+
+#titulo{
+	width: 280px;
+	margin-bottom: 15px;
+	padding: 5px;
+	font-family: "Raleway";
+}
+
+label{
+	font-family: "Raleway";
+}
+
+#portada{
+	width: 280px;
+	margin-bottom: 15px;
+	padding: 5px;
+}
+
+select{
+	width: 280px;
+	margin-bottom: 15px;
+	padding: 5px;
+	font-family: "Raleway";
 }
 
 .botones{
@@ -10,6 +35,13 @@
 .boton{
   width: 100px;
   height: 30px;
+  border:none;
+  margin-bottom: 15px;
+}
+
+.boton:hover{
+	cursor: pointer;
+	background-color: #8CC7FF;
 }
 
 #cke_publicacion{
