--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2,7 +2,7 @@
 #publicaciones{
 
   width: 800px;
-  border:0.2px solid #ccc;
+  //border:0.2px solid #ccc;
   padding: 20px;
   margin:0 auto;
 
@@ -11,13 +11,21 @@
 	.publicacion{ 	
 		margin: 0 auto;
 		width: 550px;
+		min-height: 50px;
 		border: 0.2px solid #ccc;
 		margin-bottom: 10px;
 		padding: 10px;
+		background-color: #fff;
+		z-index: 1;
+	}
+
+	.publicacion:hover{
+		cursor: pointer;
+		background-color: #8CC7FF;
 	}
 
 	.publicacion a{
-		font-family: Raleway, bold;
+		font-family: "Raleway", bold;
 		font-weight: bold;
 		text-decoration: none;
 		color: #606060;
@@ -27,9 +35,33 @@
 	}
 
 	.publicacion p{
-		font-family: Raleway;
+		font-family: "Raleway";
 		font-size: 15px;
 		text-align: justify;
+	}
+
+	.publicacion  p img {
+		float: none;
+		max-width: 0;
+		max-height: 0;
+		margin-bottom: 5px;
+	}
+
+	br{
+		clear: both;
+	}
+
+	.portada{
+
+		width: 100%;
+		max-height: 150px;
+		overflow: hidden;
+	}
+
+	.portada img{
+		width: 100%;
+		vertical-align: middle;
+		 transform: translateY(-15%);
 	}
 
 #pie{
