--- a/static/css/publicacion.css
+++ b/static/css/publicacion.css
@@ -31,6 +31,16 @@
 		text-align: justify;
 	}
 
+	br {
+		clear: both;
+		color: black;
+		background-color: #fff;
+	}
+
+	#cuerpoPub p  {
+		text-align: center;
+	}
+
 	#contenidoComment{
 		width: 850px;
 		margin: 0 auto;
