--- a/templates/Index.html
+++ b/templates/Index.html
@@ -9,11 +9,22 @@ plantilla de cuerpo.html,-->
 <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
 <!--<script type="text/javascript" src="{{ url_for('static', filename='js/cssrefresh.js') }}"></script>-->
 
+<style type="text/css">
+	#eliminar span {
+	background-image: url('../static/imagenes/cross.svg'); background-size: 20px; position: relative; float: right; width: 
+			20px; height: 20px; margin-right: 15px; margin-top: 10px;  z-index: 1;
+	}
+	#eliminar:hover span{
+		border: solid 1px #ccc;
+	}
+	</style>
+
 
 <div id="publicaciones">
 {%for a in lista%}
 	<div class="publicacion" onclick="location.href='/publicacion?ID={{a[0]}}'">
 		<div class="portada">
+			<div id="eliminar" title="Eliminar" onclick="location.href='/1'"><span></span></div>
 			<img src="{{url_for('static', filename='imagenes/'+a[5])}}">
 		</div>
 		<div>
