--- a/templates/Index.html
+++ b/templates/Index.html
@@ -10,12 +10,24 @@ plantilla de cuerpo.html,-->
 <!--<script type="text/javascript" src="{{ url_for('static', filename='js/cssrefresh.js') }}"></script>-->
 
 <style type="text/css">
-	#eliminar span {
-	background-image: url('../static/imagenes/cross.svg'); background-size: 20px; position: relative; float: right; width: 
-			20px; height: 20px; margin-right: 15px; margin-top: 10px;  z-index: 1;
+	#optiones a span {
+	 position: relative; float: right; width: 
+			12px; height: 12px; margin-right: 15px; margin-top: 10px;  z-index: 1;
 	}
-	#eliminar:hover span{
-		border: solid 1px #ccc;
+	#eliminar {
+		background-image: url('../static/imagenes/cross.svg'); background-size: 12px;
+	}
+
+	#eliminar:hover {
+		background-color: #ccc;
+	}
+
+	#editar {
+		background-image: url('../static/imagenes/edit.svg'); background-size: 12px;
+	}
+
+	#editar:hover {
+		background-color: #ccc;
 	}
 	</style>
 
@@ -24,7 +36,10 @@ plantilla de cuerpo.html,-->
 {%for a in lista%}
 	<div class="publicacion" onclick="location.href='/publicacion?ID={{a[0]}}'">
 		<div class="portada">
-			<div id="eliminar" title="Eliminar" onclick="location.href='/1'"><span></span></div>
+			<div id="optiones">
+				<a href="/deletePub?pub={{a[0]}}"><span title="Eliminar" id="eliminar"></span></a>
+				<a href="#"><span title="Editar" id="editar"></span></a>
+			</div>
 			<img src="{{url_for('static', filename='imagenes/'+a[5])}}">
 		</div>
 		<div>
