Se arreglo la forma en que se obtienen los comentarios, el area de registro, y se encriptaron las contraseñas.

--- a/static/css/publicacion.css
+++ b/static/css/publicacion.css
@@ -93,6 +93,11 @@
 			border: solid 1px #ccc;
 			margin-left:10px;
 		}
+
+		.ctrio h4:hover {
+			cursor: pointer;
+			text-decoration-line: underline;
+		}
 	#sugerenciaRegistro{
 		width: 850px;
 		margin: 0 auto;
