--- a/static/css/user.css
+++ b/static/css/user.css
@@ -6,7 +6,7 @@
 	min-height: 160px;
 	margin: 0 auto;
 	border: solid 1px #ccc;
-	display: flex;
+	//display: flex;
 }
 
 #imgProfile {
@@ -16,15 +16,16 @@
 	margin-left: 18px;
 	border-radius: 100%;
 	border: solid 1px #ccc;
-
 	overflow: hidden;
+	margin: 0 auto;
 }
 
 #imgProfile:hover{
 	margin-top: 12px;
-	margin-left: 17px; 
+	margin-left: 17px;
 	cursor: pointer;
 	box-shadow: 0px 2px 3px;
+	margin: 0 auto;
 }
 
 #imgProfile img {
@@ -42,12 +43,17 @@
 	position: absolute;
 	border-bottom: solid 1px #ccc;
 	display: flex;
+	text-align: center;
+}
+
+#nameUser h2 {
+	margin: 0 auto;
 }
 
 #verified {
 	width: 20px;
 	height: 20px;
-	position: relative;
+	//position: relative;
 	margin-left: 5px;
 	margin-bottom: 5px;
 	//border: solid 1px #ccc;
@@ -61,9 +67,10 @@
 }
 
 #frase {
-	position: absolute;
+	//position: absolute;
 	width: 400px;
 	margin-top: 75px;
 	margin-left: 185px;
 	font-family: "Raleway";
+	text-align: center;
 }
