Se modifico la forma de de obtener las publicaciones y la manera en que se presenta la información, se configuro para que el unico en poder modificar sea el propietario de una publicación. Y se arreglo un error con la fecha de publicación.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -64,6 +64,12 @@
 		 transform: translateY(-15%);
 	}
 
+	#pP {
+		width: 100%;
+		margin-top: 5px;
+		border-top: 1px solid #ccc;
+	}
+
 #pie{
 	width: 960px;
 	margin: 0 auto;
