--- a/templates/user.html
+++ b/templates/user.html
@@ -11,6 +11,7 @@
 	</section>
 
 	<section id="nameUser">
+		<div>
 		<h2>{{a[1]}} ({{a[5]}} {{a[6]}})</h2>
 		<div id="verified" title="verificado"></div>
 	</section>
