--- a/static/css/user.css
+++ b/static/css/user.css
@@ -1,5 +1,24 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
 
+#panel{
+	border: solid 1px #ccc;
+width: 100px;
+float: left;
+text-align: center;
+}
+
+#panel p{
+	margin-top: 3px;
+	padding: 2px;
+	color: #ffffff;
+	background: rgb(31, 135, 163);
+	border-radius: 3px;
+}
+
+#panel a {
+	text-decoration: none;
+}
+
 #infoUser {
 	background-color: #fff;
 	width: 750px;
