--- a/static/css/user.css
+++ b/static/css/user.css
@@ -100,3 +100,87 @@ text-align: center;
 	font-family: "Raleway";
 	text-align: center;
 }
+
+
+
+	.publicacion{
+		margin: 0 auto;
+		width: 550px;
+		min-height: 50px;
+		border: 0.2px solid #ccc;
+		margin-bottom: 10px;
+		padding: 10px;
+		background-color: #fff;
+		z-index: 1;
+		margin-top: 20px;
+	}
+
+	.publicacion:hover{
+		cursor: pointer;
+		background-color: #8CC7FF;
+	}
+
+	.publicacion a{
+		font-family: "Raleway", bold;
+		font-weight: bold;
+		text-decoration: none;
+		color: #606060;
+	}
+	.publicacion a:hover{
+		color: #000
+	}
+
+	.publicacion p{
+		font-family: "Raleway";
+		font-size: 15px;
+		text-align: justify;
+	}
+
+	.publicacion  p img {
+		float: none;
+		max-width: 0;
+		max-height: 0;
+		margin-bottom: 5px;
+	}
+
+	br{
+		clear: both;
+	}
+
+	.portada{
+
+		width: 100%;
+		max-height: 150px;
+		overflow: hidden;
+	}
+
+	.portada img{
+		width: 100%;
+		vertical-align: middle;
+		 transform: translateY(-15%);
+	}
+
+	#pP {
+		width: 100%;
+		margin-top: 5px;
+		border-top: 1px solid #ccc;
+	}
+
+#pie{
+	width: 960px;
+	margin: 0 auto;
+	margin-top: 96px;
+	padding: 15px;
+	border-top: 0.2px solid #ccc;
+	text-align: center;
+	float: left;
+}
+
+	#pie p {
+		color: gray;
+		margin: 0 auto;
+	}
+
+	#imgIconFooter{
+		width: 50px;
+	}
